src/objects/ExcessCodeEmployee__c.object
<CustomObject>
    <fields>
        <fullName>Ancillary_Excess_Description__c</fullName>
        <description>The description that should appear under the ancillary product in Thunderhead</description>
        <label>Ancillary Excess Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External ID for Reference</description>
        <externalId>true</externalId>
        <label>External_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Excess_Description__c</fullName>
        <description>The description that should appear under the hospital product in Thunderhead</description>
        <label>Hospital Excess Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Description__c</fullName>
        <description>Is the description held on the system but not actually used for anything</description>
        <label>System Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Description__c</fullName>
        <formula>if(ISPICKVAL(Type__c, &apos;H&apos;) ,&apos;Hospital&apos;,
     if(ISPICKVAL(Type__c, &apos;A&apos;) ,&apos;Ancillary&apos;,
        if(ISPICKVAL(Type__c, &apos;O&apos;),&apos; Overall&apos;, 
              if( ISPICKVAL(Type__c, &apos;B&apos;) ,  &apos;Both Hospital &amp; Ancillary&apos;, text(Type__c))
           )
        )
     )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>ExcessCodeEmployee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type_Description__c</columns>
        <columns>System_Description__c</columns>
        <columns>Hospital_Excess_Description__c</columns>
        <columns>Ancillary_Excess_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ExcessCode Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ExcessCodesEmployee</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>